WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310387
AX: AccessibilityRenderObject::setSelectedVisiblePositionRange fails for textarea inside iframe when called on the top-level web area.
https://bugs.webkit.org/show_bug.cgi?id=310387
Summary
AX: AccessibilityRenderObject::setSelectedVisiblePositionRange fails for text...
Andres Gonzalez
Reported
2026-03-20 13:38:27 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-20 13:38:34 PDT
<
rdar://problem/173025927
>
Andres Gonzalez
Comment 2
2026-03-20 13:58:57 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61034
EWS
Comment 3
2026-03-23 08:26:20 PDT
Committed
309759@main
(9d54c7c9abaa): <
https://commits.webkit.org/309759@main
> Reviewed commits have been landed. Closing PR #61034 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug