AX: AccessibilityRenderObject::setSelectedVisiblePositionRange fails for textarea inside iframe when called on the top-level web area. https://bugs.webkit.org/show_bug.cgi?id=310387 <rdar://problem/173025927>

Reviewed by Joshua Hoffman.

When AXSelectedTextMarkerRange is set on a web area but the target position is
inside a textarea's shadow DOM (e.g. a textarea inside an iframe),
AccessibilityRenderObject::setSelectedVisiblePositionRange takes the
else-if-m_renderer branch. The contains<ComposedTree> check fails for
cross-document positions, clamping the selection to the web area start instead
of moving it into the textarea.

Fix by adding an enclosingTextFormControl fallback in
setSelectedVisiblePositionRange() when the target position is inside a native
text control but 'this' is not the text control itself (e.g. this is the web
area), delegate to the text control's setSelectionRange which handles the
selection correctly.

Test: accessibility/mac/set-selected-textmarker-range-textarea-in-iframe.html

* LayoutTests/accessibility/mac/set-selected-textmarker-range-textarea-in-iframe-expected.txt: Added.
* LayoutTests/accessibility/mac/set-selected-textmarker-range-textarea-in-iframe.html: Added.
* Source/WebCore/accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::setSelectedVisiblePositionRange const):

Canonical link: https://commits.webkit.org/309759@main